Add gui with JavaFX